[package]
name = "pretendo_entertainment_system"
version = "0.1.0"
authors = ["Teddy_Wang <wangtheo662@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.33.0"
structopt = "0.3.13"

[dev-dependencies]
file_diff = "1.0.0"
